# futurepush

./: .coverage  .dockerignore  .env.example  .gitignore  DEPLOY_ALIYUN.md  Dockerfile  README.md  coverage.json  docker-compose.yml  pyproject.toml
scripts/: package_source.sh
src/futures_signal/: __init__.py  ai_commentary.py  akshare_providers.py  akshare_source.py  akshare_utils.py  cli.py  composite_source.py  config.py  data_sources.py  formatting.py  health.py  market_calendar.py  metrics.py  models.py  prediction_evaluator.py  scoring.py  service.py  storage.py  telegram.py  validation.py  wecom.py
src/futures_signal/providers/: __init__.py  position_trends.py  positions.py
src/futures_signal/repositories/: __init__.py  analysis_writes.py  base.py  market_reads.py  prediction_labels.py  predictions.py  shared.py
tests/: test_ai_commentary.py  test_akshare_source.py  test_akshare_utils.py  test_cli.py  test_composite_source.py  test_config.py  test_formatting.py  test_health.py  test_market_calendar.py  test_metrics.py  test_position_rank_provider.py  test_position_trend_provider.py  test_prediction_evaluator.py  test_runtime_health.py  test_scoring.py  test_service.py  test_storage.py  test_validation.py  test_wecom.py
